--- a/Group10/assets/css/style-starter.css
+++ b/Group10/assets/css/style-starter.css
@@ -10089,7 +10089,7 @@ max-width: 480px
     width: 100%; } }
 
 .stats {
-  background: url(../images/stats_bg.jpg) no-repeat center;
+  background: url(../images/stats_bg.webp) no-repeat center;
   background-size: cover;
   position: relative; }
 
