--- a/Group10/assets/css/style-starter.css
+++ b/Group10/assets/css/style-starter.css
@@ -76,11 +76,7 @@ body {
     outline: 0!important
 }
 
-h1,
-h2,
-h3,
 h4,
-h5,
 h6 {
     margin-top: 0;
     margin-bottom: .5rem
@@ -94,10 +90,6 @@ p {
 ul {
     margin-top: 0;
     margin-bottom: 1rem
-}
-
-strong {
-    font-weight: bolder
 }
 
 a {
@@ -167,45 +159,11 @@ button::-moz-focus-inner {
     -webkit-appearance: button
 }
 
-h1,
-h2,
-h3,
 h4,
-h5,
 h6 {
     margin-bottom: .5rem;
     font-weight: 500;
     line-height: 1.2
-}
-
-h1 {
-    font-size: 2.5rem
-}
-
-@media (max-width:1200px) {
-    h1 {
-        font-size: calc(1.375rem + 1.5vw)
-    }
-}
-
-h2 {
-    font-size: 2rem
-}
-
-@media (max-width:1200px) {
-    h2 {
-        font-size: calc(1.325rem + .9vw)
-    }
-}
-
-h3 {
-    font-size: 1.75rem
-}
-
-@media (max-width:1200px) {
-    h3 {
-        font-size: calc(1.3rem + .6vw)
-    }
 }
 
 h4 {
@@ -216,10 +174,6 @@ h4 {
     h4 {
         font-size: calc(1.275rem + .3vw)
     }
-}
-
-h5 {
-    font-size: 1.25rem
 }
 
 h6 {
@@ -294,32 +248,29 @@ h6 {
     margin-left: -15px
 }
 
+.col-10,
+.col-2,
 .col-lg-3,
 .col-lg-4,
 .col-lg-5,
 .col-lg-6,
-.col-lg-7,
 .col-lg-8,
-.col-md-12,
 .col-md-4,
-.col-md-6,
-.col-md-8,
-.col-sm-12 {
+.col-md-8 {
     position: relative;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px
 }
 
-.order-first {
-    order: -1
+.col-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%
 }
 
-@media (min-width:576px) {
-    .col-sm-12 {
-        flex: 0 0 100%;
-        max-width: 100%
-    }
+.col-10 {
+    flex: 0 0 83.33333%;
+    max-width: 83.33333%
 }
 
 @media (min-width:768px) {
@@ -327,17 +278,9 @@ h6 {
         flex: 0 0 33.33333%;
         max-width: 33.33333%
     }
-    .col-md-6 {
-        flex: 0 0 50%;
-        max-width: 50%
-    }
     .col-md-8 {
         flex: 0 0 66.66667%;
         max-width: 66.66667%
-    }
-    .col-md-12 {
-        flex: 0 0 100%;
-        max-width: 100%
     }
 }
 
@@ -358,19 +301,9 @@ h6 {
         flex: 0 0 50%;
         max-width: 50%
     }
-    .col-lg-7 {
-        flex: 0 0 58.33333%;
-        max-width: 58.33333%
-    }
     .col-lg-8 {
         flex: 0 0 66.66667%;
         max-width: 66.66667%
-    }
-    .order-lg-first {
-        order: -1
-    }
-    .offset-lg-2 {
-        margin-left: 16.66667%
     }
 }
 
@@ -581,34 +514,6 @@ button.bg-primary:hover {
     background-color: #379f96!important
 }
 
-.bg-light {
-    background-color: #f8f9fa!important
-}
-
-.rounded-circle {
-    border-radius: 50%!important
-}
-
-@media (min-width:576px) {
-    .d-sm-flex {
-        display: flex!important
-    }
-}
-
-.justify-content-between {
-    justify-content: space-between!important
-}
-
-.align-items-center {
-    align-items: center!important
-}
-
-@media (min-width:992px) {
-    .justify-content-lg-around {
-        justify-content: space-around!important
-    }
-}
-
 .fixed-top {
     position: fixed;
     top: 0;
@@ -632,14 +537,6 @@ button.bg-primary:hover {
     border: 0
 }
 
-.mb-0 {
-    margin-bottom: 0!important
-}
-
-.mr-2 {
-    margin-right: .5rem!important
-}
-
 .mt-3 {
     margin-top: 1rem!important
 }
@@ -648,7 +545,6 @@ button.bg-primary:hover {
     margin-bottom: 1rem!important
 }
 
-.mt-4,
 .my-4 {
     margin-top: 1.5rem!important
 }
@@ -662,14 +558,12 @@ button.bg-primary:hover {
     margin-top: 3rem!important
 }
 
-.m-auto {
-    margin: auto!important
+.mb-5 {
+    margin-bottom: 3rem!important
 }
 
-@media (min-width:576px) {
-    .mb-sm-5 {
-        margin-bottom: 3rem!important
-    }
+.m-auto {
+    margin: auto!important
 }
 
 @media (min-width:768px) {
@@ -691,8 +585,8 @@ button.bg-primary:hover {
     .mb-lg-0 {
         margin-bottom: 0!important
     }
-    .mt-lg-5 {
-        margin-top: 3rem!important
+    .mb-lg-5 {
+        margin-bottom: 3rem!important
     }
 }
 
@@ -722,15 +616,9 @@ button.bg-primary:hover {
     img {
         page-break-inside: avoid
     }
-    h2,
-    h3,
     p {
         orphans: 3;
         widows: 3
-    }
-    h2,
-    h3 {
-        page-break-after: avoid
     }
     @page {
         size: a3
@@ -769,32 +657,12 @@ button.bg-primary:hover {
     -moz-osx-font-smoothing: grayscale
 }
 
-.fa-star:before {
-    content: ""
-}
-
-.fa-book:before {
-    content: ""
-}
-
-.fa-trophy:before {
-    content: ""
-}
-
 .fa-twitter:before {
     content: ""
 }
 
 .fa-facebook-f:before {
     content: ""
-}
-
-.fa-wrench:before {
-    content: ""
-}
-
-.fa-briefcase:before {
-    content: ""
 }
 
 .fa-users:before {
@@ -809,20 +677,16 @@ button.bg-primary:hover {
     content: ""
 }
 
-.fa-folder-open-o:before {
-    content: ""
-}
-
 .fa-shield:before {
     content: ""
 }
 
-.fa-wifi:before {
-    content: ""
+.fa-html5:before {
+    content: ""
 }
 
-.fa-handshake-o:before {
-    content: ""
+.fa-css3:before {
+    content: ""
 }
 
 .sr-only {
@@ -849,11 +713,7 @@ body {
     font-family: Poppins, sans-serif
 }
 
-h1,
-h2,
-h3,
 h4,
-h5,
 h6 {
     margin: 0;
     padding: 0;
@@ -869,10 +729,6 @@ p {
     color: var(--para-color)
 }
 
-p.white {
-    color: #eee
-}
-
 .align-center {
     align-self: center
 }
@@ -883,18 +739,8 @@ p.white {
     }
 }
 
-.banner {
-    background-color: #0c0e27;
-    background-color: #0c3866;
-    color: #fff
-}
-
 section {
     padding: 80px 0
-}
-
-section:first-child {
-    padding-top: 0
 }
 
 a {
@@ -922,64 +768,6 @@ a:hover {
     background: #007cc0;
     color: #fff;
     transform: translateY(5px)
-}
-
-.section-title {
-    font-weight: 700;
-    font-size: 2em;
-    margin-bottom: 1em;
-    padding-bottom: .6em;
-    position: relative;
-    text-align: center;
-    text-transform: capitalize
-}
-
-.section-title::before {
-    background-color: var(--heading-color);
-    margin: 0 auto;
-    bottom: 0;
-    content: "";
-    height: 2px;
-    left: 0;
-    position: absolute;
-    right: 0;
-    width: 80px;
-    box-sizing: border-box
-}
-
-h3.title {
-    font-weight: 700;
-    font-size: 2.2em;
-    padding-bottom: 1em;
-    position: relative
-}
-
-.left-title {
-    font-weight: 700;
-    font-size: 2em;
-    padding-bottom: .6em;
-    position: relative;
-    color: #fff
-}
-
-.counter {
-    text-align: center
-}
-
-.counter .icon span.fa {
-    font-size: 50px;
-    line-height: 55px;
-    margin-bottom: 25px;
-    color: #fff
-}
-
-.value {
-    font-size: 50px;
-    line-height: 55px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    color: #fff;
-    letter-spacing: 1px
 }
 
 header {
@@ -1030,67 +818,6 @@ header {
 .navbar-expand-lg .navbar-nav .nav-link:hover {
     color: #fff;
     opacity: 1
-}
-
-#home {
-    padding-top: 13em
-}
-
-h1.title {
-    font-size: 50px;
-    color: #fff
-}
-
-.banner p {
-    color: #ddd
-}
-
-.banner-effect {
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0
-}
-
-.box-wrap {
-    margin-top: 30px;
-    padding: 40px 20px;
-    transition: all .5s ease 0s;
-    border-radius: 8px;
-    box-shadow: 0 25px 98px 0 rgba(0, 0, 0, .03);
-    background-color: #fff;
-    text-align: center
-}
-
-.box-wrap:hover {
-    box-shadow: 0 25px 98px 0 rgba(0, 0, 0, .1)
-}
-
-.box-wrap h4 a {
-    font-size: 20px;
-    font-weight: 600;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
-    display: block;
-    color: var(--heading-color)
-}
-
-.box-wrap h4 a:hover {
-    color: #49c0b6
-}
-
-.box-wrap p {
-    margin: 0;
-    text-align: center;
-    color: var(--para-color)
-}
-
-.icon span.fa {
-    color: #49c0b6;
-    font-size: 30px
 }
 
 #site-footer .top-footer {
@@ -1241,43 +968,6 @@ h1.title {
     }
 }
 
-.stats {
-    background: url(../images/stats_bg.webp) no-repeat center;
-    background-size: cover;
-    position: relative
-}
-
-.stats:before {
-    content: '';
-    position: absolute;
-    background: #000;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: .7
-}
-
-.customers_grid {
-    text-align: center;
-    padding: 40px 20px;
-    transition: all .5s ease 0s;
-    border-radius: 5px;
-    border: 1px solid #e5e5e5
-}
-
-.custo_grid h5 {
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
-    margin-top: 20px;
-    display: inline-block
-}
-
-.ratings span.fa {
-    color: #49c0b6
-}
-
 h6 {
     font-size: 20px;
     line-height: 28px;
@@ -1311,62 +1001,9 @@ h6 {
     transform: translateY(-5px)
 }
 
-@media only screen and (max-width:1080px) {
-    h1.title {
-        font-size: 45px
-    }
-}
-
 @media only screen and (max-width:992px) {
-    .value {
-        font-size: 40px;
-        line-height: 45px
-    }
-    #home {
-        padding-top: 8em
-    }
     section {
         padding: 60px 0
-    }
-    .testimonials {
-        margin-bottom: 50px
-    }
-}
-
-@media only screen and (max-width:568px) {
-    .banner img {
-        max-width: 400px
-    }
-    h1.title {
-        font-size: 40px
-    }
-    .counter-main {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px
-    }
-    .counter {
-        text-align: left
-    }
-}
-
-@media only screen and (max-width:480px) {
-    .left-title,
-    .section-title {
-        font-size: 1.5em
-    }
-    .testimonials {
-        margin-bottom: 40px
-    }
-    .counter .icon span.fa {
-        font-size: 40px;
-        line-height: 45px;
-        margin-bottom: 15px
-    }
-    .value {
-        font-size: 35px;
-        line-height: 40px;
-        margin-bottom: 5px
     }
 }
 
@@ -1380,34 +1017,61 @@ h6 {
         width: 100%;
         margin-top: 10px
     }
-    h1.title {
-        font-size: 33px
-    }
-    .banner img {
-        max-width: 350px
-    }
-    .counter .icon span.fa {
-        font-size: 35px;
-        line-height: 40px
-    }
-    .value {
-        font-size: 30px;
-        line-height: 35px
-    }
-}
-
-@media only screen and (max-width:384px) {
-    h1.title {
-        font-size: 28px
-    }
-    .banner img {
-        max-width: 100%
-    }
 }
 
 @media (max-width:375px) {
     .btn-style {
         padding: 14px 25px
+    }
+}
+
+span.title {
+    display: inline-block;
+    background: #49c0b6;
+    padding: 5px 15px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    color: #fff;
+    font-size: 15px
+}
+
+.w3l-mobile-content-6 {
+    background: #f8f9fa
+}
+
+.w3l-mobile-content-6 .mobile-right-icon {
+    text-align: center
+}
+
+.w3l-mobile-content-6 .mobile-right-icon span.fa {
+    font-size: 30px;
+    color: #49c0b6
+}
+
+.w3l-mobile-content-6 .mobile-right-info h6 a {
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 600;
+    color: var(--heading-color);
+    margin-bottom: 10px;
+    display: inline-block
+}
+
+.w3l-mobile-content-6 .mobile-right-info h6 a:hover {
+    color: #49c0b6
+}
+
+@media only screen and (max-width:992px) {
+    .mobile-left {
+        height: 300px;
+        overflow: hidden;
+        margin: 20px 0 40px
+    }
+}
+
+@media (max-width:384px) {
+    .w3l-mobile-content-6 .mobile-right-info h6 a {
+        font-size: 18px
     }
 }
 
