--- a/Group10/assets/css/style-starter.css
+++ b/Group10/assets/css/style-starter.css
@@ -2124,7 +2124,7 @@ button.bg-dark:hover {
     right: 0;
     left: 0;
     z-index: 1030;
-    background-color: #124f8f;
+    background-color: #124f8f
 }
 
 .fixed-bottom {
